--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -76,6 +76,12 @@
 
       <hr>
 
+      <div class="alert alert-info">
+        <%= link_to @pin.category.name, @pin.category%>
+      </div>
+
+      <hr>
+
       <div>
       <!-- Share Button BEGIN -->
       <div class="addthis_toolbox addthis_default_style ">
